# LaTeX_linter

./: Bill_of_materials.md  Bill_of_materials.txt  CMakeLists.txt  README.md  Reader.cpp  Reader.h  Text.tex  main.cpp  newText.tex  rules.json
linterTest/: CMakeLists.txt  linterTests.cpp
